# Terra-Infinity

./: .coveragerc  .gitignore  README.md  fractal_coastline.py  generate.py  geom.py  map.py  mypy.ini  poisson_sample.py  pytest.ini  report_images.py  report_images2.py  report_images3.py  report_images4.py  ruff.toml  sourceme  sourceme.ps1  tree_params.txt  visualise.py
.github/workflows/: initial.yml  terra_testing.yaml  terra_testing_periodic.yaml
Coastline/: fractal_coastline.py  geom.py  primitives.py
Noise/: __init__.py  colormap.py  generate.py  parallel.py  simplex.py
biomes/: climate_map.py  create_voronoi.py  land_water_map.py  midpoint_displacement.py  sub_biomes.py  sub_biomes_experiment.py  sub_biomes_test.py
biomes/tests/: climate_map_test.py  create_voronoi_test.py  land_water_map_test.py  midpoint_displacement_test.py  sub_biomes_test.py
cellular_automata/: CA.py  Mask 1.raw  scaling_heightmap.py  voronoi.py
cellular_automata/tests/: test_CA.py
coastline/: __init__.py  fractal_coastline.py  geom.py  primitives.py
data/: simplex_heightmap.raw
data/saved/: async_test2  async_testing  bob2  icen  myWorld  new  newWorld  temp  test1  test2
environment/: build_environment.ps1  build_environment.sh  environment.yaml
flora/: flora_placement.py  shrubs.py
flora/tests/: flora_placement_test.py
generation/: __init__.py  abstract_forms.py  diamond_square.py  display.py  erosion.py  flattening_problem.py  parallel.py  simp_noise.py  tools.py
heightmap/: heightmap_generation.py
infrastructure/: cloned_test.sh  test.sh
master_script/: README.md  biome_based_terrain_generator.py  generate_large.py  generate_large_server.py  master_script.py  master_script_server.py  offload_heightmaps.py  parse_packet.py
path_planning/: apsp_testing.py  pathplanning.py  pathplanning_approx.py  pathplanning_og.py  stats.py
real_rivers/: carving.py  point_generation.py  river_experiment.py  river_network.py  river_test.py  riverize.py  tree_spline.py  voronoi_map.py
renderer/: CMakeLists.txt  Makefile  README.md
renderer/deprecated/: README.md  World.cpp  headless.cpp  main_basic_cubes.cpp  normals.cpp
renderer/home_dependencies/: glad.c  stb_image.h
renderer/home_dependencies/filesystem/: filesystem.h
renderer/home_dependencies/glad/: glad.h
renderer/home_dependencies/stb/: stb_image.h  stb_image_resize2.cpp
renderer/include/: Axes.hpp  Camera.hpp  Chunk.hpp  Cube.hpp  Cursor.hpp  Framebuffer.hpp  Globals.hpp  IRenderable.hpp  Light.hpp  LinuxMain.hpp  Object.hpp  Ocean.hpp  Parameters.hpp  Player.hpp  README.md  Renderer.hpp  Screen.hpp  Settings.hpp  Shader.hpp  SkyBox.hpp  SubChunk.hpp  Sun.hpp  Terrain.hpp  Texture.hpp  TextureArray.hpp  Triangle.hpp  UI.hpp  Utility.hpp  Vertex.hpp  WaterFrameBuffer.hpp  Window.hpp  WindowsMain.hpp  World.hpp  camera.h  dept_World.hpp  load_obj.h  renderer.hpp  renderer2.hpp  shader_m.h
renderer/resources/textures/main/Ground024_1K-JPG/: Ground024_1K-JPG.usdc
renderer/src/experimental/: Chunk.cpp  Ocean.cpp  SubChunk.cpp  World.cpp  basic_ui.cpp  headless_video.cpp  imgui.ini  main_load_mesh.cpp  simple_mesh_generation.cpp  test_async.cpp
renderer/src/prism/: Axes.cpp  Camera.cpp  Chunk.cpp  Cube.cpp  Cursor.cpp  Framebuffer.cpp  LinuxMain.cpp  Ocean.cpp  Parameters.cpp  Player.cpp  README.md  Renderer.cpp  Screen.cpp  Settings.cpp  Shader.cpp  SkyBox.cpp  SubChunk.cpp  Sun.cpp  Terrain.cpp  Texture.cpp  TextureArray.cpp  Triangle.cpp  UI.cpp  Utility.cpp  Vertex.cpp  WaterFrameBuffer.cpp  Window.cpp  WindowsMain.cpp  World.cpp  colour_shader.fs  colour_shader.vs  linux_main.cpp  load_obj.cpp  main.cpp  main_load_mesh.cpp  quad_shader.fs  quad_shader.vs  skybox.vs  texture.fs  windows_main.cpp
renderer/src/prism/shaders/: axis_shader.fs  axis_shader.vs  colour_shader.fs  colour_shader.vs  cube_shader.fs  cube_shader.vs  light_source_shader.vs  light_vecs_shader.fs  light_vecs_shader.vs  normals_shader.fs  ocean_shader.fs  ocean_shader.vs  quad_shader.fs  quad_shader.vs  skybox.fs  skybox_shader.fs  skybox_shader.vs  sun_shader.fs  terrain_shader.fs  terrain_shader.vs  texture.fs  texture.vs  triangle_shader.vs
renderer/tests/: README.md  Settings_test.cpp
renderer/tests/mocks/: LinuxCallbackMocks.cpp
rivers/: carve.py  carve2.py  carve3.py  carve4.py  graph_preparation.py  smooth.py  smooth2.py  smooth3.py  temp.py
saves/example/: example.json
saves/first/: first.json
saves/pls/: pls.json
saves/pls work/: pls work.json
saves/plsss/: plsss.json
saves/second/: second.json
saves/test2/: test2.json
saves/test3/: test3.json
saves/this/: this.json
scripts/: slurm_job_launcher_wrapper.sh  slurm_script_generation_wrapper.sh  terra_infinity.sh  terra_testing.sh
theory/: README.md  dla.py  dla_coalesce.py  dla_coalesce_parallel.py  dla_coalescing_heightmap.py  dla_heightmap.py  visualise.py
theory/cdla_analysis/: cdla_using_rw.py  dla_grid.pkl  dla_using_rw.py  lattice.py  rw_trajectory_gen.py  visualise_grid.py
theory/experiments/: l_system.py
theory/fractcal_analysis/: fractal_dim.py
theory/misc/: cdla.py  cdla_ainmation.py  dla_animation.py  dla_approx  dla_approx.cpp  dla_coalesce_speed.py  dla_driver.py  dla_runtime_graph.py  junk  junk.c  positions.txt  temp.py
trees/lsystems/: gen_mesh.py
trees/lsystems2/: branch.py  leaf.py  lombardy_poplar.py  my_lsystem.py  my_visualisation.py  quaking_aspen.py  visualisation.py
utils/: point_generation.py  visualise.py  voronoi_binary_mask.py
world_generation/: README.md
world_generation/biomes/: climate_map.py  create_voronoi.py  land_water_map.py  midpoint_displacement.py  sub_biomes.py
world_generation/cellular_automata/: CA.py  scaling_heightmap.py
world_generation/coastline/: __init__.py  fractal_coastline.py  geom.py  primitives.py
world_generation/flora/: flora_placement.py
world_generation/generation/: __init__.py  abstract_forms.py  diamond_square.py  display.py  erosion.py  flattening_problem.py  parallel.py  simp_noise.py  tools.py
world_generation/integration_tests/: end_to_end.py  end_to_end_test.py
(+190 files in other folders)
